cli/src/snapshots/squawk__config__test_config__load_cfg_full.snap
---
source: cli/src/config.rs
expression: "Config::parse(Some(squawk_toml.path().to_path_buf()))"
---
Ok(
    Some(
        Config {
            excluded_rules: [
                RequireConcurrentIndexCreation,
            ],
            pg_version: Some(
                Version {
                    major: 19,
                    minor: Some(
                        1,
                    ),
                    patch: None,
                },
            ),
            assume_in_transaction: Some(
                true,
            ),
        },
    ),
)
