cli/src/snapshots/squawk__config__test_config__load_excluded_paths.snap
---
source: cli/src/config.rs
expression: "Config::parse(Some(squawk_toml.path().to_path_buf()))"

---
Ok(
    Some(
        Config {
            excluded_paths: [
                "example.sql",
            ],
            excluded_rules: [],
            pg_version: None,
            assume_in_transaction: None,
        },
    ),
)
