cli/src/snapshots/squawk__config__test_config__load_excluded_rules.snap
---
source: cli/src/config.rs
expression: "Config::parse(Some(squawk_toml.path().to_path_buf()))"

---
Ok(
    Some(
        Config {
            excluded_paths: [],
            excluded_rules: [
                RequireConcurrentIndexCreation,
            ],
            pg_version: None,
            assume_in_transaction: None,
        },
    ),
)
