cli/src/snapshots/squawk__config__test_config__load_pg_version.snap
---
source: cli/src/config.rs
expression: "Config::parse(Some(squawk_toml.path().to_path_buf()))"
---
Ok(
    Some(
        Config {
            excluded_rules: [],
            pg_version: Some(
                Version {
                    major: 19,
                    minor: Some(
                        1,
                    ),
                    patch: None,
                },
            ),
        },
    ),
)
